--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "goit-js-hw-12-countries",
+  "name": "news-api-hw-js",
   "version": "1.0.0",
   "description": "## Зависимости",
   "main": ".posthtmlrc.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url /goit-js-hw-13-image-finder",
+    "build": "parcel build src/index.html --public-url /news-api-hw-js",
 	"deploy": "gh-pages -d dist",
 	"predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/denis-tsibaev/goit-js-hw-13-image-finder.git"
+    "url": "git+https://github.com/denis-tsibaev/news-api-hw-js.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/denis-tsibaev/goit-js-hw-13-image-finder/issues"
+    "url": "https://github.com/denis-tsibaev/news-api-hw-js/issues"
   },
-  "homepage": "https://denis-tsibaev/github.io/goit-js-hw-13-image-finder",
+  "homepage": "https://denis-tsibaev/github.io/news-api-hw-js",
   "dependencies": {
     "gh-pages": "^3.2.3",
     "handlebars": "^4.7.7",
