--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": ".posthtmlrc.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url /goit-js-hw-12-countries",
+    "build": "parcel build src/index.html --public-url /goit-js-hw-13-image-finder",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
@@ -21,12 +21,16 @@
   },
   "homepage": "https://github.com/denis-tsibaev/goit-js-hw-13-image-finder#readme",
   "devDependencies": {
+    "@pnotify/core": "^5.2.0",
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.7.1",
     "sass": "^1.35.1"
   },
   "dependencies": {
+    "basiclightbox": "^5.0.4",
     "gh-pages": "^3.2.3",
+    "lodash": "^4.17.21",
     "parcel-bundler": "^1.12.5"
   }
 }
