--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "goit-js-hw-13-image-finder",
   "version": "1.0.0",
-  "description": "## Зависимости",
-  "main": ".posthtmlrc.js",
+  "description": "",
+  "main": ".index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url /goit-js-hw-13-image-finder",
+    "dev": "parcel src/*.html",
+    "build": "parcel build src/*.html --public-url /goit-js-hw-13-image-finder",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
